--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context=".splash.SplashScreen">
+    tools:context=".onboarding.SplashScreen">
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/fragmentContainerView"
