--- a/app/src/main/res/layout/fragment_checklist_basic.xml
+++ b/app/src/main/res/layout/fragment_checklist_basic.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/darker_gray"
-    tools:context=".fragment.FragmentChecklist">
+    tools:context=".info.FragmentChecklist">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
