--- a/app/src/main/res/layout/fragment_cpr_child.xml
+++ b/app/src/main/res/layout/fragment_cpr_child.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragment.FragmentCprChild">
+    tools:context=".info.FragmentCprChild">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
