--- a/app/src/main/res/layout/fragment_sos.xml
+++ b/app/src/main/res/layout/fragment_sos.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragment.SosFragment">
+    tools:context=".sos.SosFragment">
 
     <TextView
         android:id="@+id/gps_address"
