--- a/app/src/main/res/layout/fragment_sos_amb.xml
+++ b/app/src/main/res/layout/fragment_sos_amb.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/fragment_sos_amb"
-    tools:context=".fragment.SosAmbFragment">
+    tools:context=".sos.SosAmbFragment">
 
     <TextView
         android:id="@+id/amd_loc"
