--- a/app/src/main/res/layout/activity_ambulance.xml
+++ b/app/src/main/res/layout/activity_ambulance.xml
@@ -25,7 +25,8 @@ tools:context=".sos.AmbulanceActivity">
             android:background="#00FFFFFF"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/ic_back" />
+            app:srcCompat="@drawable/ic_back"
+            android:contentDescription="@string/back" />
 
         <TextView
             android:id="@+id/amb_title"
@@ -59,7 +60,7 @@ tools:context=".sos.AmbulanceActivity">
 <androidx.recyclerview.widget.RecyclerView
     android:id="@+id/amb_recycler_view"
     android:layout_width="match_parent"
-    android:layout_height="500dp"
+    android:layout_height="510dp"
     android:fillViewport="true"
     android:overScrollMode="never"
     app:layout_constraintEnd_toEndOf="parent"
@@ -75,13 +76,13 @@ tools:context=".sos.AmbulanceActivity">
     android:layout_marginStart="24dp"
     android:layout_marginEnd="24dp"
     android:layout_marginBottom="24dp"
-    android:layout_marginTop="24dp"
+    android:layout_marginTop="14dp"
     android:text="@string/sos_amb_notice"
     android:textSize="14sp"
     android:textAppearance="@style/Body2"
     android:textColor="@color/gray300"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintTop_toBottomOf="@id/amb_recycler_view"/>
+    app:layout_constraintBottom_toBottomOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
