--- a/app/src/main/res/layout/fragment_sos.xml
+++ b/app/src/main/res/layout/fragment_sos.xml
@@ -50,7 +50,7 @@
             <TextView
                 android:id="@+id/txt_select_num"
                 android:layout_width="wrap_content"
-                android:layout_height="19dp"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="28dp"
                 android:fontFamily="@font/spoqa_han_sans_neo_bold"
                 android:text="@string/sos_txt_select_num"
