--- a/app/src/main/res/layout/intime_widget.xml
+++ b/app/src/main/res/layout/intime_widget.xml
@@ -1,6 +1,5 @@
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/widget_bg"
@@ -22,12 +21,13 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="4"
-            android:contentDescription="@string/appwidget_text"
+            android:contentDescription="@string/app_name"
             android:fontFamily="@font/spoqa_han_sans_neo_bold"
-            android:text="@string/appwidget_text"
+            android:text="@string/app_name"
             android:textColor="@color/gray600"
             android:textFontWeight="900"
-            android:textSize="13sp" />
+            android:textSize="14sp"
+            tools:ignore="NestedWeights" />
 
         <ImageView
             android:id="@+id/widget_gps"
@@ -35,28 +35,28 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:layout_marginTop="5dp"
-            android:src="@drawable/widget_gps" />
+            android:src="@drawable/widget_gps"
+            android:contentDescription="@string/widget_loc" />
 
         <TextView
             android:id="@+id/widget_gps_txt"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="3"
-            android:text="현재위치"
+            android:text="@string/widget_loc"
             android:textColor="@color/gray600"
             android:fontFamily="@font/spoqa_han_sans_neo_bold"
             android:textFontWeight="900"
-            android:textSize="10sp"/>
+            android:textSize="12sp"/>
 
         <TextView
             android:id="@+id/widget_currentLoc"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="13"
-            android:text="서울시 마포구 성산동"
             android:textColor="@color/gray600"
             android:fontFamily="@font/spoqa_han_sans_neo_regular"
-            android:textSize="10sp"/>
+            android:textSize="12sp"/>
 
         <ImageButton
             android:id="@+id/widget_refresh"
@@ -64,7 +64,8 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:background="#00FFFFFF"
-            android:src="@drawable/widget_refresh" />
+            android:src="@drawable/widget_refresh"
+            android:contentDescription="@string/widget_refresh" />
 
     </LinearLayout>
 
@@ -84,7 +85,9 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:background="#00FFFFFF"
-            android:src="@drawable/widget_119" />
+            android:src="@drawable/widget_119"
+            android:contentDescription="@string/sos_btn_119"
+            tools:ignore="NestedWeights" />
 
         <ImageButton
             android:id="@+id/widget_112"
@@ -92,7 +95,8 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:background="#00FFFFFF"
-            android:src="@drawable/widget_112" />
+            android:src="@drawable/widget_112"
+            android:contentDescription="@string/sos_btn_112"/>
 
         <ImageButton
             android:id="@+id/widget_fav"
@@ -100,7 +104,8 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:background="#00FFFFFF"
-            android:src="@drawable/widget_fav" />
+            android:src="@drawable/widget_fav"
+            android:contentDescription="@string/sos_btn_fav"/>
 
         <ImageButton
             android:id="@+id/widget_cpr"
@@ -108,7 +113,8 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:background="#00FFFFFF"
-            android:src="@drawable/widget_cpr" />
+            android:src="@drawable/widget_cpr"
+            android:contentDescription="@string/widget_cpr" />
 
     </LinearLayout>
 
